# sig17starterpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench_local.sh  compile.sh  package.sh  run.sh  sample.load
bencher/: CMakeLists.txt
bencher/include/: popenRWE.h
bencher/src/: bencher.cpp  generator.cpp  nextgenerator.cpp  popenRWE.cpp
reference/: CMakeLists.txt
reference/include/baseline/: ngramer.hpp  statngramer.hpp
reference/src/: ngramer.cpp  runner.cpp  statrunner.cpp  tester.cpp
